google-java-format and other checkstyle